<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fsr_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/common_start_end_padding"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fsr_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/common_start_end_padding"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fsr_search_edt"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionSearch"
        app:layout_constraintStart_toStartOf="@id/fsr_start_guideline"
        app:layout_constraintEnd_toEndOf="@id/fsr_end_guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fsr_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/fsr_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/fsr_search_edt"
        android:text="@string/search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fsr_result_list_rc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fsr_header_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/fsr_header_divider"
        style="@style/DividerHeader"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/fsr_search_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>